more work on geting vbox to work again

--- a/cluster_configs/inflate_vbox.conf
+++ b/cluster_configs/inflate_vbox.conf
@@ -31,13 +31,13 @@ virtualbox:
 <start profiles>
 debian-512mb:
   provider: virtualbox
-  clonefrom: debian-512mb
+  clonefrom: debian8-512mb
 debian-1024mb:
   provider: virtualbox
-  clonefrom: debian-1024mb
+  clonefrom: debian8-1024mb
 debian-2048mb:
   provider: virtualbox
-  clonefrom: debian-2048mb
+  clonefrom: debian8-2048mb
 </end profiles>
 
 <start map>
