edited inflate_hadoop_on_vbox.conf to work on vbox

--- a/cluster_configs/inflate_vbox.conf
+++ b/cluster_configs/inflate_vbox.conf
@@ -29,19 +29,40 @@ virtualbox:
 </end providers>
 
 <start profiles>
-debian-512mb:
+debian8-512mb:
   provider: virtualbox
   clonefrom: debian8-512mb
-debian-1024mb:
+debian8-1024mb:
   provider: virtualbox
   clonefrom: debian8-1024mb
-debian-2048mb:
+debian8-2048mb:
   provider: virtualbox
   clonefrom: debian8-2048mb
+debian8-4096mb:
+  provider: virtualbox
+  clonefrom: debian8-4096mb
+debian8-8192mb:
+  provider: virtualbox
+  clonefrom: debian8-8192mb
+ubuntu14-512mb:
+  provider: virtualbox
+  clonefrom: ubuntu14-512mb
+ubuntu14-1024mb:
+  provider: virtualbox
+  clonefrom: ubuntu14-1024mb
+ubuntu14-2048mb:
+  provider: virtualbox
+  clonefrom: ubuntu14-2048mb
+ubuntu14-4096mb:
+  provider: virtualbox
+  clonefrom: ubuntu14-4096mb
+ubuntu14-8192mb:
+  provider: virtualbox
+  clonefrom: ubuntu14-8192mb
 </end profiles>
 
 <start map>
-debian-512mb:
+debian8-512mb:
 {% for n in range(2) %}
   - minion-{{ n }}:
       grains:
