got vbox working again

--- a/cluster_configs/inflate_vbox.conf
+++ b/cluster_configs/inflate_vbox.conf
@@ -10,9 +10,27 @@ minion_repos:
 
 <start top>
 base:
-  'role:salted_dev_to_prod_presentation':
+{% if grains.get('reboot_round') == 0 %}
+  'master':
+    - cluster_init.upgrade_all
+  'primary_role:load_balancer':
     - match: grain
+    - cluster_init.upgrade_all
+  'primary_role:app_server':
+    - match: grain
+    - cluster_init.upgrade_all
     - salted_dev_to_prod_presentation
+{% endif %}
+{% if grains.get('reboot_round') == 1 %}
+  'master':
+    - cluster_init.upgrade_all
+  'primary_role:load_balancer':
+    - match: grain
+    - cluster_init.upgrade_all
+  'primary_role:app_server':
+    - match: grain
+    - cluster_init.upgrade_all
+{% endif %}
 </end top>
 
 <start providers>
