added in root install command that works on ubuntu 16.04

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,12 @@ syntax: glob
 *.pub
 
 ## paths
+build
 srv/salt/ssh_keys/
 env.sh
 digitalocean.env.sh
 aws.env.sh
 .tmp/
+.downloads
 keys/
 auth/tokens/*
