now using official salt on master

--- a/cluster_configs/inflate_vbox.conf
+++ b/cluster_configs/inflate_vbox.conf
@@ -86,11 +86,13 @@ debian8-512mb:
       grains:
         primary_role: load_balancer
         vm_size: 512mb
+        domain: test.local
 {% endfor %}
 {% for n in range(2,4) %}
   - minion-{{ n }}:
       grains:
         primary_role: app_server
         vm_size: 512mb
+        domain: test.local
 {% endfor %}
 </end map>
