--- a/cluster_configs/small_vbox.conf
+++ b/cluster_configs/small_vbox.conf
@@ -70,6 +70,21 @@ ubuntu14-4096mb:
 ubuntu14-8192mb:
   provider: virtualbox
   clonefrom: ubuntu14-8192mb
+ubuntu16-512mb:
+  provider: virtualbox
+  clonefrom: ubuntu16-512mb
+ubuntu16-1024mb:
+  provider: virtualbox
+  clonefrom: ubuntu16-1024mb
+ubuntu16-2048mb:
+  provider: virtualbox
+  clonefrom: ubuntu16-2048mb
+ubuntu16-4096mb:
+  provider: virtualbox
+  clonefrom: ubuntu16-4096mb
+ubuntu16-8192mb:
+  provider: virtualbox
+  clonefrom: ubuntu16-8192mb
 </end profiles>
 
 <start map>
