now cluster builds on ubuntu 17 host

--- a/cluster_configs/small_vbox.conf
+++ b/cluster_configs/small_vbox.conf
@@ -5,7 +5,7 @@ vendor:
 
 <start repos>
 minion_repos:
-  - git@bitbucket.org:terminal_labs/salted_dev_to_prod_presentation.git
+  - git@github.com:terminal-labs/rambo_hadoop-ambari.git
 </end repos>
 
 <start top>
