more work on getting fqdn to work on vbox

--- a/cluster_configs/small_vbox.conf
+++ b/cluster_configs/small_vbox.conf
@@ -12,16 +12,18 @@ minion_repos:
 base:
 {% if grains.get('reboot_round') == 0 %}
   'master':
+    - match: compound
     - cluster_init.upgrade_all
-  'primary_role:load_balancer':
-    - match: grain
+  'minion-0':
+    - match: compound
     - cluster_init.upgrade_all
 {% endif %}
 {% if grains.get('reboot_round') == 1 %}
   'master':
+    - match: compound
     - cluster_init.upgrade_all
-  'primary_role:load_balancer':
-    - match: grain
+  'minion-0':
+    - match: compound
     - cluster_init.upgrade_all
 {% endif %}
 </end top>
