fqdn now works on aws

--- a/cluster_configs/small_aws.conf
+++ b/cluster_configs/small_aws.conf
@@ -29,64 +29,42 @@ base:
 </end top>
 
 <start providers>
-virtualbox:
-  driver: virtualbox
-  power_on: True
-  deploy: True
+aws:
+  driver: ec2
+  id: {{ personal_access_token }}
+  key: {{ personal_access_key }}
+  #debian-jessie-amd64-hvm-2015-04-25-23-22-ebs - ami-0343ae47
+  #ubuntu-trusty-14.04-amd64-server-20170727 (ami-b2527ad2)
+  image: ami-b2527ad2
+  location: 'us-west-1'
+  availability_zone: 'us-west-1c'
+  securitygroup: 'salted_server'
   ssh_username: vagrant
-  password: vagrant
-  script: bootstrap-salt
-  script_args: git v2017.7.1
+  private_key: /home/saltmaster/salt_controlplane/keys/aws.pem
+  keyname: aws
+  deploy: True
+  script: init-ubuntu-1404
+  script_args: -n
   minion:
     master: {{ master_address }}
 </end providers>
 
 <start profiles>
-debian8-512mb:
-  provider: virtualbox
-  clonefrom: debian8-512mb
-debian8-1024mb:
-  provider: virtualbox
-  clonefrom: debian8-1024mb
-debian8-2048mb:
-  provider: virtualbox
-  clonefrom: debian8-2048mb
-debian8-4096mb:
-  provider: virtualbox
-  clonefrom: debian8-4096mb
-debian8-8192mb:
-  provider: virtualbox
-  clonefrom: debian8-8192mb
 ubuntu14-512mb:
-  provider: virtualbox
-  clonefrom: ubuntu14-512mb
+  provider: aws
+  size: t2.nano
 ubuntu14-1024mb:
-  provider: virtualbox
-  clonefrom: ubuntu14-1024mb
+  provider: aws
+  size: t2.micro
 ubuntu14-2048mb:
-  provider: virtualbox
-  clonefrom: ubuntu14-2048mb
+  provider: aws
+  size: t2.small
 ubuntu14-4096mb:
-  provider: virtualbox
-  clonefrom: ubuntu14-4096mb
+  provider: aws
+  size: t2.medium
 ubuntu14-8192mb:
-  provider: virtualbox
-  clonefrom: ubuntu14-8192mb
-ubuntu16-512mb:
-  provider: virtualbox
-  clonefrom: ubuntu16-512mb
-ubuntu16-1024mb:
-  provider: virtualbox
-  clonefrom: ubuntu16-1024mb
-ubuntu16-2048mb:
-  provider: virtualbox
-  clonefrom: ubuntu16-2048mb
-ubuntu16-4096mb:
-  provider: virtualbox
-  clonefrom: ubuntu16-4096mb
-ubuntu16-8192mb:
-  provider: virtualbox
-  clonefrom: ubuntu16-8192mb
+  provider: aws
+  size: t2.large
 </end profiles>
 
 <start map>
