--- a/cluster_configs/inflate_small_on_vbox.conf
+++ b/cluster_configs/inflate_small_on_vbox.conf
@@ -5,6 +5,7 @@ vendor:
 
 <start repos>
 minion_repos:
+  - git@github.com:terminal-labs/inflation-keystone_hadoop.git
   - git@github.com:terminal-labs/rambo.git
 </end repos>
 
