now salt_commands.sh renders lastpass username/password template vars in inflation config files

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ digitalocean.env.sh
 aws.env.sh
 .tmp/
 .downloads
+.rambo-tmp
 keys/
+auth/*
 auth/tokens/*
 /inflation_resources/compiled_scripts
