added in minion-1/minion-2 salt operations

--- a/cluster_configs/inflate_mongo_vbox.conf
+++ b/cluster_configs/inflate_mongo_vbox.conf
@@ -7,6 +7,7 @@ vendor:
 minion_repos:
   - git@github.com:terminal-labs/rambo.git
   - git@github.com:terminal-labs/inflation-keystone_rambo.git
+  - git@github.com:terminal-labs/inflation-saltstates_mongo-datanode.git
 </end repos>
 
 <start top>
@@ -18,12 +19,24 @@ base:
   'minion-0':
     - match: compound
     - cluster_init.upgrade_all
+  'minion-1':
+    - match: compound
+    - cluster_init.upgrade_all
+  'minion-2':
+    - match: compound
+    - cluster_init.upgrade_all
 {% endif %}
 {% if grains.get('reboot_round') == 1 %}
   'master':
     - match: compound
     - cluster_init.upgrade_all
   'minion-0':
+    - match: compound
+    - cluster_init.upgrade_all
+  'minion-1':
+    - match: compound
+    - cluster_init.upgrade_all
+  'minion-2':
     - match: compound
     - cluster_init.upgrade_all
 {% endif %}
