mongo cluster noew runs mongo-node on all minoins

--- a/cluster_configs/inflate_mongo_vbox.conf
+++ b/cluster_configs/inflate_mongo_vbox.conf
@@ -5,9 +5,8 @@ vendor:
 
 <start repos>
 minion_repos:
-  - git@github.com:terminal-labs/rambo.git
-  - git@github.com:terminal-labs/inflation-keystone_rambo.git
-  - git@github.com:terminal-labs/inflation-saltstates_mongo-datanode.git
+  - git@github.com:terminal-labs/inflation-keystone-mongo.git
+  - git@github.com:terminal-labs/mongo-node.git
 </end repos>
 
 <start top>
@@ -33,12 +32,15 @@ base:
   'minion-0':
     - match: compound
     - cluster_init.upgrade_all
+    - mongo-node
   'minion-1':
     - match: compound
     - cluster_init.upgrade_all
+    - mongo-node
   'minion-2':
     - match: compound
     - cluster_init.upgrade_all
+    - mongo-node
 {% endif %}
 </end top>
 
@@ -104,12 +106,14 @@ ubuntu16-8192mb:
 </end profiles>
 
 <start map>
-ubuntu14-2048mb:
+ubuntu16-2048mb:
 {% for n in range(3) %}
   - minion-{{ n }}:
       grains:
         primary_role: cluster node
         vm_size: 2048mb
         domain: test.local
+        deescalated_user: vagrant
+        project: mongo
 {% endfor %}
 </end map>
