added in a init function

--- a/sample-cluster-configs/inflate_1_node_cluster_on_vbox.conf
+++ b/sample-cluster-configs/inflate_1_node_cluster_on_vbox.conf
@@ -44,7 +44,7 @@ virtualbox:
 <start map>
 ubuntu16-2048mb:
 {% for n in range(1) %}
-  - minion-{{ n }}-548747x:
+  - minion-{{ n }}:
       grains:
         minion_hostname: minion-{{ n }}
         primary_role: load_balancer
