--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# use glob syntax.
 syntax: glob
 
 ## patterns
@@ -11,20 +10,21 @@ syntax: glob
 *.vagrant*
 *.pem
 *.pub
+*.log
+*.pyc
+*.#*
+*#
+*.egg-info
+*flymd*
 
 ## paths
-build
-srv/salt/ssh_keys/
+dist
 env.sh
 digitalocean.env.sh
 aws.env.sh
-.tmp/
-.downloads
-.rambo-tmp
-keys/
-auth/*
-*/auth
-secrets
-auth/tokens/*
-*.egg-info
-*__pycache__*
+docs/_build
+srv/salt/ssh_keys
+rambo/saltstack
+.tmp
+**/auth/keys
+**/licenses
