--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,40 @@
-syntax: glob
+.coverage
+logs
+keys.sh
+id_rsa
+id_rsa.pub
 
-## patterns
-*.orig
-*.tgz
-*.swp
-*.swo
+package-lock.json
+__pycache__
+env
+node_modules
+extra
+.vagrant
+\#*\#
 *~
-*.DS_Store*
-*.vagrant*
-*.pem
-*.pub
-*.log
+*egg-info
 *.pyc
-*.#*
-*#
-*.egg-info
+*.pex
 
-## paths
-dist
-env.sh
-digitalocean.env.sh
-aws.env.sh
-docs/_build
-srv/salt/ssh_keys
-rambo/saltstack
-.rambo-tmp
+maintenance
+run
+tmp
 .tmp
-**/auth/keys
-**/licenses
+manifest
+activate.sh
+*keys.sh
+.Trash*
+*.zip
+*nodes
+*nohup.out
+*workingdirs
+*secrets
+*dist
+
+*.terraform
+*terraform.tfstate
+*terraform.tfstate.backup
+*terraform_*.zip
+
+ubuntu-bionic-18.04-cloudimg-console.log
+ubuntu-xenial-16.04-cloudimg-console.log
