--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,23 @@ jobs:
           name: Mock vagrant
           command: |
             sudo bash .circleci/mock_vagrant.sh
+      - run:
+          name: Download python environment manager
+          command: |
+            sudo bash .circleci/download_python_environment_manager.sh
+      - run:
+          name: Install deps
+          command: |
+            cd /vagrant; sudo bash maintenance/general/pyenv/install_apt_dependencies.sh inflation vagrant linux
+      - run:
+          name: Install python
+          command: |
+            cd /vagrant; sudo bash maintenance/general/pyenv/install_python.sh inflation vagrant linux
+      - run:
+          name: Install app
+          command: |
+            cd /vagrant; sudo bash maintenance/general/pyenv/install_app.sh inflation vagrant linux
+      - run:
+          name: Run tests
+          command: |
+            cd /vagrant; sudo bash maintenance/general/pyenv/run_tests.sh inflation vagrant linux
