--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        echo "test0"
+        sudo bash .repo/mock_vagrant.sh
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
