--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,3 +17,7 @@ jobs:
       run: |
         sudo bash .repo/mock_vagrant.sh
         sudo bash .repo/download_python_environment_manager.sh
+        cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/install_apt_dependencies.sh inflation vagrant vagrant
+        cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/install_python.sh inflation vagrant vagrant
+        cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/install_app.sh inflation vagrant vagrant
+        cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/run_tests.sh inflation vagrant vagrant
