Update and rename pythonapp.yml to full-build.yml

--- a/.github/workflows/full-build.yml
+++ b/.github/workflows/full-build.yml
@@ -1,4 +1,7 @@
-name: Python application
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
+name: full-build
 
 on:
   push:
@@ -13,10 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Full build
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
       run: |
         sudo bash .repo/mock_vagrant.sh
         sudo bash .repo/download_python_environment_manager.sh
+        cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/install_apt_dependencies.sh inflation vagrant vagrant
         cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/install_python.sh inflation vagrant vagrant
         cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/install_app.sh inflation vagrant vagrant
         cd /vagrant; sudo bash .tmp/bash-environment-manager-master/makefile_resources/scripts_python/run_tests.sh inflation vagrant vagrant
