--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
       run: |
         sudo bash .repo/mock_vagrant.sh
         sudo bash .repo/download_bash_environment_manager.sh
-        cd /vagrant; sudo su vagrant -c "sudo make conda"
+        sudo -H -u vagrant bash -c 'export HOME=/home/vagrant; cd /vagrant; sudo make conda'
