--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,6 @@ jobs:
     - name: Run bash-environment-manager      
       run: |
         sudo bash .repo/mock_vagrant.sh
+        curl https://raw.githubusercontent.com/terminal-labs/bash-environment-shelf/master/prepscripts/download_bash_environment_manager.sh --output download_bash_environment_manager.sh
         sudo bash .repo/download_bash_environment_manager.sh
         sudo -H -u vagrant bash -c 'export HOME=/home/vagrant; cd /vagrant; sudo make conda'
