--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run bash-environment-manager      
       run: |
-        curl https://raw.githubusercontent.com/terminal-labs/bash-environment-shelf/master/prepscripts/mock_vagrant.sh --output mock_vagrant.sh
-        curl https://raw.githubusercontent.com/terminal-labs/bash-environment-shelf/master/prepscripts/download_bash_environment_manager.sh --output download_bash_environment_manager.sh
+        curl https://raw.githubusercontent.com/terminal-labs/bash-environment-shelf/master/prepscripts/mock_vagrant.sh --output .repo/mock_vagrant.sh
+        curl https://raw.githubusercontent.com/terminal-labs/bash-environment-shelf/master/prepscripts/download_bash_environment_manager.sh --output .repo/download_bash_environment_manager.sh
         sudo bash .repo/mock_vagrant.sh
         sudo bash .repo/download_bash_environment_manager.sh
         sudo -H -u vagrant bash -c 'export HOME=/home/vagrant; cd /vagrant; sudo make conda'
